--- a/templates/review.html
+++ b/templates/review.html
@@ -1,10 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
+    <title>게시판</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+
+    <style>
+
+    </style>
+    <script>
+        $(document).ready(function () {
+            listing();
+        });
+
+        function listing() {
+            $.ajax({
+                type: 'GET',
+                url: '/library/nick',
+                data: {},
+                success: function (response) {
+
+                }
+            })
+        }
+
+
+        function posting() {
+            let url = $('#url').val()
+            let reviewcomment = $('#reviewcomment').val()
+
+            $.ajax({
+                type: 'POST',
+                url: '/library/write',
+                data: {url_give: url, reviewcomment_give: reviewcomment},
+                success: function (response) {
+                    alert(response['msg'])
+                    window.location.reload()
+                }
+            })
+        }
+
+        // 사진 미리보기
+        // function readURL(input) {
+        //     if (input.files && input.files[0]) {
+        //         var reader = new FileReader();
+        //         reader.onload = function (e) {
+        //             document.getElementById('preview').src = e.target.result;
+        //         };
+        //         reader.readAsDataURL(input.files[0]);
+        //     } else {
+        //         document.getElementById('preview').src = "";
+        //     }
+        // }
+    </script>
+
+<body>
+<!--<?$board_id=$_GET['board_id'];?>-->
+<div id="board_write">
+    <h4>글을 작성하는 공간입니다.</h4>
+    <h3>여기</h3>
+    <div id="write_area">
+        <form enctype="multipart/form-data" action="write_ok.php?board_id=<?echo $board_id;?>" method="post">
+            <!--            <div id="in_title">-->
+            <!--                <textarea name="title" id="utitle" rows="1" cols="55" placeholder="제목" maxlength="100"-->
+            <!--                          required></textarea>-->
+            <!--            </div>-->
+            <div class="mb-3">
+                <label for="url" class="form-label">URL을 알려주세요</label>
+                <input id ="url" type="email" class="form-control"  placeholder="URL을 주세요">
+            </div>
+            <div class="mb-3">
+                <label for="reviewcomment" class="form-label">리뷰를 작성해주세요</label>
+                <textarea class="form-control" id="reviewcomment" rows="3" placeholder="코멘트를 작성해주세요"></textarea>
+            </div>
+<!--                        <input type="file" name="SelectFile"/>-->
+            <!-- 사진 미리보기 -->
+<!--                        <input type="file" onchange="readURL(this);">-->
+<!--                        <br/>-->
+<!--                        <img id="preview"/>-->
+
+            <div class="reviewbtns">
+                <button onclick="posting()" type="button" class="btn btn-dark">저장하기</button>
+            </div>
+        </form>
+    </div>
+</div>
 </body>
+
 </html>
