--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+  <head>
 
-</body>
+    <!-- Webpage Title -->
+    <title>Draft99</title>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bulma CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+		<!-- JS -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+
+    <script>
+      // 로그아웃은 내가 가지고 있는 토큰만 쿠키에서 없애면 됩니다.
+      function logout(){
+        $.removeCookie('mytoken');
+        alert('로그아웃!')
+        window.location.href='/login'
+      }
+      function redirectWrite(){
+        alert("글 작성 페이지로 이동합니다.")
+        window.location.href='/write'
+      }
+      function redirectMyPage(){
+        alert("개인정보 페이지로 이동합니다.")
+        window.location.href='/myPage'
+      }
+
+    </script>
+
+  </head>
+  <body>
+    <p>
+      <h1 class="title">Draft99</h1>
+      <h1 class="subtitle">draft99 main page</h1>
+    </p>
+    <h5 class="subtitle">나의 닉네임은: {{nickname}}</h5>
+    <p>
+      <h1 class="redirect_write">게시글을 작성해보세요</h1>
+      <button onclick="redirectWrite()">글작성페이지로</button>
+    </p>
+    <button class="button is-danger" onclick="logout()">로그아웃하기</button>
+  </body>
 </html>
