--- a/templates/myPage.html
+++ b/templates/myPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Darft99 - 회원정보</title>
 </head>
 <body>
 
