--- a/templates/community.html
+++ b/templates/community.html
@@ -8,7 +8,7 @@
     
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
-    <link rel="stylesheet" href="./sytle/review.css"></link>
+    <link rel="stylesheet" href="../sytle/review.css"></link>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
